--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-resource": "^1.5.3"
+    "vue-resource": "^1.5.3",
+    "vue-quill-editor": "^3.0.6",
+    "vue-input-tag": "^2.0.7",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
