--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -15,7 +15,9 @@
     "vue-resource": "^1.5.3",
     "vue-quill-editor": "^3.0.6",
     "vue-input-tag": "^2.0.7",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "mini-toastr": "^0.8.1",
+    "vue-notifications": "^1.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
