--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,8 @@ jobs:
           java-version: 11
       - name: Build
         run: ./mvnw verify -B
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+          with:
+            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+            heroku_app_name: "recipes-mleduc" #Must be unique in Heroku
+            heroku_email: "manuel.leduc@gmail.com"
