--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 quarkus.datasource.db-kind=h2
-#quarkus.datasource.jdbc.driver=com.ibm.db2.jcc.DBDriver
 quarkus.datasource.username=username-default
-quarkus.datasource.jdbc.url=jdbc:h2:file:/./data
-quarkus.hibernate-orm.database.generation=update
-#quarkus.datasource.jdbc.max-size=13
-
+quarkus.datasource.jdbc.url=jdbc:h2:file:./h2file
+quarkus.hibernate-orm.database.generation=drop-and-create
+#quarkus.security.jdbc.enabled=true
+#quarkus.security.jdbc.principal-query.sql=SELECT u.password, u.role FROM test_user u WHERE u.username=?
+#quarkus.security.jdbc.principal-query.clear-password-mapper.enabled=true
+#quarkus.security.jdbc.principal-query.clear-password-mapper.password-index=1
+#quarkus.security.jdbc.principal-query.attribute-mappings.0.index=2
+#quarkus.security.jdbc.principal-query.attribute-mappings.0.to=groups
+quarkus.http.auth.basic=true
+quarkus.http.port=${PORT:8080}
