--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -1,50 +1,30 @@
 {
-  "name": "webapp",
-  "version": "0.1.0",
-  "private": true,
+  "name": "recipes",
+  "version": "0.0.0",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "watch": "vue-cli-service build --mode=development --watch --dest ../resources/META-INF/resources/",
-    "prod": "vue-cli-service build --dest ../resources/META-INF/resources/"
+    "dev": "vite",
+    "build": "vite build",
+    "watch": "vite build --watch --mode=development",
+    "preview": "vite preview --port 5050",
+    "test:unit": "vitest --environment jsdom",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-resource": "^1.5.3",
-    "vue-quill-editor": "^3.0.6",
-    "vue-input-tag": "^2.0.7",
-    "vuex": "^3.6.2",
-    "mini-toastr": "^0.8.1",
-    "vue-notifications": "^1.0.2"
+    "pinia": "^2.0.11",
+    "vue": "^3.2.31",
+    "vue3-quill": "0.2.6",
+    "@sipec/vue3-tags-input": "3.0.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "@rushstack/eslint-patch": "^1.1.0",
+    "@vitejs/plugin-vue": "^2.2.2",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "eslint": "^8.5.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "jsdom": "^19.0.0",
+    "prettier": "^2.5.1",
+    "vite": "^2.8.4",
+    "vitest": "^0.5.0"
+  }
 }
